# EdgeFinder

./: .dockerignore  .env  DEPLOYMENT.md  DEPLOYMENT_READY.md  DEPLOYMENT_TROUBLESHOOTING.md  Dockerfile  ENVIRONMENT_FIX.md  KALSHI_API_SETUP.md  NEWSLETTER_SETUP.md  Procfile  QUICK_DEPLOY.md  README.md  RENDER_ENVIRONMENT_SETUP.md  RENDER_ENVIRONMENT_UPDATE.md  RENDER_FIX.md  RENDER_KALSHI_SETUP.md  WEB_INTERFACE.md  debug_deployment.py  docker-compose.yml  pyproject.toml  railway-deploy.md  railway.env  railway.json  render-deploy.md  test_deployed_api.py  test_deployment.py  test_email_debug.py  test_email_now.py  test_email_simple.py  test_email_system.py  test_env.py  test_env_check.py  test_kalshi.py  test_kalshi_jwt.py  test_newsletter_system.py  test_realtime_data.py  test_welcome_email.py
data/: newsletter_subscriptions.json
scripts/: deploy.sh  prepare_deploy.sh  run_once.sh  setup-railway.sh  setup-render.sh
src/: __init__.py  config.py  main.py
src/auth/: kalshi_auth.py
src/core/: models.py  odds_math.py  pipeline.py
src/data/: cache.py  kalshi_client.py  mapping.py  odds_client.py  robinhood_client.py  simple_robinhood_client.py
src/models/: newsletter.py
src/render/: __init__.py  newsletter.py
src/scheduler/: newsletter_scheduler.py
src/services/: email_service.py  newsletter_generator.py  welcome_email_service.py
src/util/: log.py  time.py
static/css/: style.css
static/js/: app.js
templates/: index.html
tests/: test_mapping.py  test_math.py  test_pipeline.py
tests/fixtures/: sample_kalshi.json  sample_odds.json
