[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "edgefinder"
version = "0.1.0"
description = "Sports vs Robinhood Predictions MVP"
authors = [
    {name = "EdgeFinder Team"},
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "requests>=2.31.0",
    "pandas>=2.1.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "pytz>=2023.3",
    "apscheduler>=3.10.0",
    "aiofiles>=23.2.0",
    "jinja2>=3.1.0",
    "PyJWT>=2.8.0", # For JWT authentication
    "cryptography>=41.0.0", # For RSA key handling
    "schedule>=1.2.0", # For newsletter scheduling
    "email-validator>=2.0.0", # For email validation
]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.7.0",
]

[project.scripts]
edgefinder = "src.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
